Session based track user adding